# PyPen

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  LICENSE  README.md  pyglet_test.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypen_cd.yml  pypen_ci.yml  test.yml
docs/: BEHIND_THE_SCENES.md  EXAMPLE.md  LINUX.md
docs/source/: behind_the_scenes.rst  conf.py  index.rst
examples/: example_001.py  example_002.py  example_003.py  example_004.py  example_005.py  example_006.py  example_007.py  example_008.py  example_009.py  example_010.py  example_011.py
pypen/: __init__.py  __main__.py  pypen_template.py  settings.py
pypen/drawing/: __init__.py  color.py  css_colors.py  fake_primitives.py  fake_pypen.py  primitives.py  pypen_class.py  pypen_window.py
pypen/utils/: __init__.py  helpers.py  math.py
pyperlib/: __init__.py  __main__.py  settings.py
pyperlib/classes/: __init__.py  pyper.py
pyperlib/drawing/: __init__.py  color.py  primitives.py  window.py
pyperlib/primitives/: __init__.py  rectangle.py
pyperlib/utils/: __init__.py  math.py
tests/: test_scene.py  tests.py
tests/test_scenes/: test_colors.py  test_init.py  test_no_start_or_update.py
