[pep8]
max_line_length = 150
aggressive = 5
ignore = E226,E302,E41
recursive = 1
in_place = 1
verbose = 1
statistics = 1

[metadata]
name = pyperlib
author = ErikWDev
author-email = ErikWDev@gmail.com
summary = A blank paper for your creative adventures in Python!
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/Canvim/Pyper
project_urls =
    Bug Tracker = https://github.com/Canvim/Pyper/issues/
    Source Code = https://github.com/Canvim/Pyper/
    Examples = https://github.com/Canvim/Pyper/tree/master/examples/
license = MIT
version = 0.0.4

[files]
packages = pyperlib

[entry_points]
console_scripts =
    pyper = pyperlib.__main__:cli
    pyperlib = pyperlib.__main__:cli

[bdist_wheel]
universal = 1