[pep8]
exclude = __init__.py
max_line_length = 150
aggressive = 1
ignore = E226,E302,E41
recursive = 1
in_place = 1
verbose = 1
statistics = 1

[metadata]
name = pypen
author = ErikWDev
author-email = ErikWDev@gmail.com
summary = Express your creativity through simple pens with PyPen! 
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/Canvim/PyPen
project_urls =
    Bug Tracker = https://github.com/Canvim/PyPen/issues/
    Source Code = https://github.com/Canvim/PyPen/
    Examples = https://github.com/Canvim/PyPen/tree/master/examples/
license = MIT
version = 0.0.3

[files]
packages = pypen

[entry_points]
console_scripts =
    pypen = pypen.__main__:cli

[bdist_wheel]
universal = 1